...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/xmlButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/composeButton"
        app:layout_constraintTop_toTopOf="parent">
...
